# pycodegraph

./: .gitignore  .importlinter  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  test_inferdb_queries.py
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-remove-build-context.md  0002-test-analysis-stage.md  0003-dataflow-analysis-stage.md  0004-summary-claims-semantic-overlay.md
docs/diagnosis/: explore-missing-files.md
docs/mappings/: cross_graph_aliases.yaml
docs/research/: consumer-evidence-provider-integration.md
docs/superpowers/plans/: 2026-05-26-inferdb-support.md
docs/superpowers/specs/: 2026-05-26-inferdb-support-design.md
examples/: evidence_provider_demo.py  forwards_value_demo.py  inlinefact_wire_test.py  semantic_query.py
scripts/: debug_seeding.py  test_explore_django.py
specs/constrains/: codegraph-module.md  config-module.md  context-module.md  db-module.md  extraction-module.md  graph-module.md  integrations-module.md  resolution-module.md  search-module.md  types-module.md
src/pycodegraph/: __init__.py  codegraph.py  config.py  example.py  fs.py  types.py
src/pycodegraph/claims/: __init__.py  overlay.py
src/pycodegraph/context/: __init__.py  builder.py  formatter.py
src/pycodegraph/dataflow/: __init__.py  slicing.py
src/pycodegraph/db/: __init__.py  _cache.py  backend.py  dialects.py  inferdb.py  queries.py  tables.py
src/pycodegraph/explore/: __init__.py  blast_radius.py  budget.py  clustering.py  engine.py  flow.py  formatter.py  (+3 more)
tests/: conftest.py  test_backend_abc.py  test_claims.py  test_clustering.py  test_context.py  test_dataflow_queries.py  test_dataflow_slice.py  test_explore.py  test_extraction.py  test_file_deps.py  test_graph_traversal.py  test_incremental.py  test_indexing.py  test_inferdb_queries.py  test_inline_facts.py  test_lifecycle.py  test_open_from_url.py  test_pg_claims.py  test_pg_queries.py  test_pg_verify.py  test_prepare_for_storage.py  test_query_utils.py  test_resolution.py  test_rwr.py  test_search.py  test_semantic_cross_graph.py  test_semantic_graphify_adapter.py  test_semantic_graphify_adapter_slow.py  test_semantic_graphify_rst_extractor.py  test_test_analysis.py
(+58 files in other folders)
